--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
+}
+
+li {
+  list-style: none;
+  margin-left: -50px;
+}
+
+ul {
+  margin-left: -20px;
 }
 
 .logo {
